[package]
name = "closefds"
version = "0.1.0"
authors = ["Palmer Cox <p@lmercox.com>"]
keywords = ["fork", "exec", "unix", "process", "spawn"]
categories = ["os", "os::unix-apis"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Functionality to set FD_CLOEXEC flag on file descriptors after fork and before exec"

[dependencies]
libc = "0.2"
errno = "0.2"
